--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,10 @@ force_sort_within_sections = true
 # Enable Pyflakes and pycodestyle rules.
 select = ["F", "E", "C90", "I", "N", "S", "B", "C4"]
 fix = true
+
+[tool.black]
+fast = true
+check = true
+workers = 4
+skip-string-normalization = true
+#skip-magic-trailing-comma = true
